Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100870

QtTestLib's blacklisting doesn't take global data tags into account

    XMLWordPrintable

Details

    • All
    • 479c95729a (qt/qtbase/dev) 479c95729a (qt/tqtc-qtbase/dev) 3044abb84e (qt/qtbase/6.3) 3044abb84e (qt/tqtc-qtbase/6.3) 3044abb84e (qt/qtbase/6.3.1) 3044abb84e (qt/tqtc-qtbase/6.3.1) 9dab082d7d (qt/tqtc-qtbase/6.2)

    Description

      When a test has global data (set up by its initTestCase_data() function), it reports itself with a name like name:global:local, so the naive user blacklisting a test is apt to think this is a reasonable entry to put inside square brackets in a blacklist file. However, checkBlackLists() only gets passed the test name and local data-row tag, without a global data-row tag.
      So the name the test reports doesn't get recognised and using it in the blacklist file doesn't work.
      Discovered as a result of a review that thought it was blacklisting tests but wasn't.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              Eddy Edward Welbourne
              Eddy Edward Welbourne
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes