src/testlib/qtestblacklist.cpp
@@ -1,6 +1,6 @@
 /****************************************************************************
 **
-** Copyright (C) 2016 The Qt Company Ltd.
+** Copyright (C) 2022 The Qt Company Ltd.
 ** Contact: https://www.qt.io/licensing/
 **
 ** This file is part of the QtTest module of the Qt Toolkit.
@@ -59,17 +59,25 @@ QT_BEGIN_NAMESPACE
   referring to this documentation is kind to readers.  Comments can also be used
   to indicate the reasons for ignoring particular cases.
 
-  The key "ci" applies only when run by COIN.
-  The key "cmake" applies when Qt is built using CMake. Other keys name platforms,
-  operating systems, distributions, tool-chains or architectures; a !  prefix
-  reverses what it checks.  A version, joined to a key (at present, only for
-  distributions and for msvc) with a hyphen, limits the key to the specific
-  version.  A keyword line matches if every key on it applies to the present
-  run.  Successive lines are alternate conditions for ignoring a test.
+  The key "ci" applies only when run by COIN. The key "cmake" applies when Qt
+  is built using CMake. Other keys name platforms, operating systems,
+  distributions, tool-chains or architectures; a ! prefix reverses what it
+  checks. A version, joined to a key (at present, only for distributions and
+  for msvc) with a hyphen, limits the key to the specific version. A keyword
+  line matches if every key on it applies to the present run. Successive lines
+  are alternate conditions for ignoring a test.
 
-  Ungrouped lines at the beginning of a file apply to the whole testcase.
-  A group starts with a [square-bracketed] identification of a test function,
-  optionally with (after a colon, the name of) a specific data set, to ignore.
+  Ungrouped lines at the beginning of a file apply to the whole testcase. A
+  group starts with a [square-bracketed] identification of a test function to
+  ignore. For data-driven tests, this identification can be narrowed by the
+  inclusion of global and local data row tags, separated from the function name
+  and each other by colons. If both global and function-specific data rows tags
+  are supplied, the global one comes first (as in the tag reported in test
+  output, albeit in parentheses after the function name). Even when a test does
+  have global and local data tags, you can omit either or both. (If a global
+  data row's name coincides with that of a local data row, some unintended
+  matches may result; try to keep your data-row tags distinct.)
+
   Subsequent lines give conditions for ignoring this test.
 
         # See qtbase/src/testlib/qtestblacklist.cpp for format
@@ -88,6 +96,9 @@ QT_BEGIN_NAMESPACE
         # Needs basic C++11 support
         [testfunction2:testData]
         msvc-2010
+
+        [getFile:withProxy SSL:localhost]
+        android
 
   QML test functions are identified using the following format:
 
@@ -296,17 +307,25 @@ void parseBlackList()
     }
 }
 
-void checkBlackLists(const char *slot, const char *data)
+void checkBlackLists(const char *slot, const char *data, const char *global)
 {
     bool ignore = ignoreAll;
 
     if (!ignore && ignoredTests) {
         QByteArray s = slot;
-        ignore = (ignoredTests->find(s) != ignoredTests->end());
+        ignore = ignoredTests->find(s) != ignoredTests->end();
         if (!ignore && data) {
-            s += ':';
-            s += data;
-            ignore = (ignoredTests->find(s) != ignoredTests->end());
+            s = (s + ':') + data;
+            ignore = ignoredTests->find(s) != ignoredTests->end();
+        }
+
+        if (!ignore && global) {
+            s = slot + ":"_qba + global;
+            ignore = ignoredTests->find(s) != ignoredTests->end();
+            if (!ignore && data) {
+                s = (s + ':') + data;
+                ignore = ignoredTests->find(s) != ignoredTests->end();
+            }
         }
     }
 
